Updating Project Info

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,6 +6,7 @@ header{
     align-items: center;
     margin-bottom: 16px;
     width:100%;
+    max-height:60px;
     box-shadow: 0px 1px 5px 0 $shadow;
     position:sticky;
     top:0;
