--- a/src/app/pages/cv-page/cv-page.component.html
+++ b/src/app/pages/cv-page/cv-page.component.html
@@ -22,9 +22,9 @@
         </p>
         <h2>www.brooklynpedley.co.uk</h2>
         <p>
-            I am a full stack web developer with a wealth of skills across multiple technologies. 
-            With almost 4  years of industry experience I know how to take ownership of projects across their full life cycle.
-            From  requirements analysis to developing the entire stack of an app,
+            I am a full-stack web developer with a wealth of skills across multiple technologies. 
+            With almost 4  years of industry experience I know how to take ownership of projects across their full life cycle,
+            from  requirements analysis to developing the entire stack of an app,
             all the way to ensuring it is properly hosted and supported. 
             I am now looking for my next big step.
         </p>
@@ -41,7 +41,8 @@
                 Junior Developer at AlphaFirst September 2020-June 2021
             </h3>
             <p>
-                Creating bespoke applications for local businesses
+                Creating bespoke applications for local businesses. Helping to cut costs and save time by integrating with cloud services such as Microsoft Graph, 
+                Plaid and Xero to automate admin tasks and limit the need for local servers.
             </p>
             <ul>
                 <li>
@@ -55,28 +56,22 @@
                     designing efficient views and tables by making use of indexing tools. Managing user security and SQL server agent jobs.
                 </li>
                 <li>
-                    Creating APIs using Express.JS and Loopback 3 and 4. Allowing SSO authentication on these APIs through the use of Passport.JS.
+                    Creating APIs using Express.JS and Loopback 3/4. Integrating SSO through Passport.JS.
                 </li>
                 <li>
-                    Creating full stack web apps using VB.NET. Using Infragistics to handle tables with millions of rows.
-                </li>
-                <li>
-                    Integrating with many top third party APIs such as Microsoft Graph, Xero, Plaid and more. Deep understand of the Oauth flow and how to implement it correctly.
+                    Creating full-stack web apps using VB.NET. Using Infragistics to handle tables with millions of rows.
                 </li>
                 <li>
                     Writing utility scripts with PowerShell to run data feeds on servers.
                 </li>
                 <li>
-                    Managing relationships with clients to support them in their use of apps, and discuss future improvements.
+                    Managing relationships with clients and supporting them with their apps.
                 </li>
                 <li>
                     Using Microsoft Azure to manage active directory and app registrations.
                 </li>
                 <li>
-                    Managing private web hosting using IIS and Certify The Web on VPSs.
-                </li>
-                <li>
-                    Creating WordPress and Shopify sites.
+                    Managing hosting on IIS and SSL certs on Certify The Web.
                 </li>
             </ul>
         </section>
@@ -98,7 +93,7 @@
                     Creating desktop apps using Electron.
                 </li>
                 <li>
-                    Managing web hosting using AWS.
+                    Managing web hosting on AWS.
                 </li>
                 <li>
                     Creating WordPress websites.
